# tetris-c-

./: CMakeLists.txt  README.md  main.cpp
src/ActiveFigure/: ActiveFigure.cpp  ActiveFigure.h
src/Board/: Board.cpp  Board.h
src/Cell/: Cell.cpp  Cell.h
src/Engine/: Engine.cpp  Engine.h
src/Figure/: Figure.cpp  Figure.h  FigureFactory.cpp  FigureFactory.h
src/Row/: Row.cpp  Row.h
